--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="resources/nrihack.jpg" rotation="0 -130 0"></a-sky>
+      <a-sky src="resources/nrihack.jpg" ></a-sky>
     </a-scene>
   </body>
 </html>
